tests/baselines/reference/ModuleWithExportedAndNonExportedEnums.errors.txt
==== tests/cases/compiler/ModuleWithExportedAndNonExportedEnums.ts (1 errors) ====
    module A {
        export enum Color { Red, Blue }
        enum Day { Monday, Tuesday }
    }
    
    // not an error since exported
    var a: A.Color = A.Color.Red;
    
    // error not exported
    var b = A.Day.Monday;
              ~~~
!!! ModuleWithExportedAndNonExportedEnums.ts(10,11): error TS2094: The property 'Day' does not exist on value of type 'typeof A'.
    